--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
 
     <!--Main Activity-->
     <string name="menu_add_song">Add Song</string>
+    <string name="menu_show_background">Show Background</string>
+    <string name="menu_hide_background">Hide Background</string>
 
     <string name="hint_title">Title</string>
     <string name="hint_author">Author</string>
@@ -14,7 +16,7 @@
     <string name="no_songs">Tap the \"+\" button above to add a song</string>
     <string name="no_notes">Press \"+\" to add a note.\nLong press \"+\" for more options.</string>
     <string name="button_delete">Delete</string>
-    <string name="text_syllable">Syllable:</string>
+    <string name="text_syllable">Syllable</string>
     <string name="error_no_title">Please type in a title</string>
     <string name="menu_edit">Edit</string>
     <string name="menu_delete">Delete</string>
@@ -31,6 +33,7 @@
     <string name="menu_export_song">Export song</string>
     <string name="menu_export_songs">Export songs</string>
     <string name="menu_import_songs">Import songs</string>
+    <string name="menu_credits">Credits</string>
     <string name="export_to">Export to…</string>
     <string name="error_exporting_song">Error exporting song</string>
     <string name="error_importing_song">Error importing song</string>
@@ -40,5 +43,7 @@
     <string name="songs_imported">songs imported</string>
     <string name="permission_needed">Permission needed to import songs</string>
     <string name="no_songs_selected_export">No songs selected</string>
-    <string name="checkbox_show_bendings">Bend notes</string>
+    <string name="checkbox_show_bendings">Show bendings</string>
+    <string name="checkbox_hide_bendings">Hide bendings</string>
+    <string name="credits">Credits</string>
 </resources>
