--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
 
     <string name="hint_title">Title</string>
     <string name="hint_author">Author</string>
+    <string name="hint_section_name">Section name</string>
     <string name="button_ok">OK</string>
     <string name="button_cancel">Cancel</string>
     <string name="button_yes">Yes</string>
@@ -18,6 +19,7 @@
     <string name="button_delete">Delete</string>
     <string name="text_syllable">Syllable</string>
     <string name="error_no_title">Please type in a title</string>
+    <string name="error_no_section_name">Please type in a section name</string>
     <string name="menu_edit">Edit</string>
     <string name="menu_delete">Delete</string>
     <string name="menu_add_note">Add note</string>
@@ -25,6 +27,9 @@
     <string name="menu_delete_row">Delete row</string>
     <string name="menu_copy_row">Copy row</string>
     <string name="menu_paste_row">Paste row</string>
+    <string name="menu_add_section">Add section tag</string>
+    <string name="menu_edit_section">Edit section tag</string>
+    <string name="menu_delete_section">Delete section tag</string>
     <string name="delete_song_message">Are you sure you want to delete</string>
     <string name="select_songs_export">Select the songs to export</string>
     <string name="toast_note_copied">note copied</string>
@@ -47,5 +52,7 @@
     <string name="checkbox_hide_bendings">Hide bendings</string>
     <string name="dialog_add_song">Add Song</string>
     <string name="dialog_edit_song">Edit Song</string>
+    <string name="dialog_add_section">Add Section</string>
+    <string name="dialog_edit_section">Edit Section</string>
     <string name="credits">Credits</string>
 </resources>
