Added song keys

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,6 @@
     <!--Main Activity-->
     <string name="menu_add_song">Add Song</string>
     <string name="menu_search">Search</string>
-    <string name="menu_show_background">Show Background</string>
-    <string name="menu_hide_background">Hide Background</string>
 
     <string name="hint_title">Title</string>
     <string name="hint_author">Author</string>
@@ -57,4 +55,5 @@
     <string name="dialog_edit_section">Edit Section</string>
     <string name="credits">Credits</string>
     <string name="hint_search">Search song</string>
+    <string name="song_key">Key</string>
 </resources>
