--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="menu_export_songs">Export songs</string>
     <string name="menu_import_songs">Import songs</string>
     <string name="menu_credits">Credits</string>
+    <string name="menu_settings">Settings</string>
     <string name="export_to">Export to…</string>
     <string name="error_exporting_song">Error exporting song</string>
     <string name="error_importing_song">Error importing song</string>
@@ -56,4 +57,13 @@
     <string name="credits">Credits</string>
     <string name="hint_search">Search song</string>
     <string name="song_key">Key</string>
+
+    <!-- Settings -->
+    <string name="settings_general_settings">GENERAL SETTINGS</string>
+    <string name="settings_backup_restore">BACKUP/RESTORE SONGS</string>
+    <string name="settings_backup">Backup</string>
+    <string name="settings_restore">Restore</string>
+    <string name="settings_credits">Credits</string>
+    <string name="settings_rate_app">Rate the app</string>
+    <string name="settings_feedback">Feedback</string>
 </resources>
