--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,69 +1,78 @@
 <resources>
     <string name="app_name">My Harmonica Songs</string>
 
-    <!--Main Activity-->
-    <string name="menu_add_song">Add Song</string>
-    <string name="menu_search">Search</string>
-
-    <string name="hint_title">Title</string>
-    <string name="hint_author">Author</string>
-    <string name="hint_section_name">Section name</string>
+    <!-- General -->
     <string name="button_ok">OK</string>
-    <string name="button_cancel">Cancel</string>
     <string name="button_yes">Yes</string>
     <string name="button_no">No</string>
-    <string name="button_export">Export</string>
-    <string name="no_songs">Press \"+\" to add a song</string>
-    <string name="no_notes">Press \"+\" to add a note.\nLong press \"+\" for more options.</string>
-    <string name="button_delete">Delete</string>
-    <string name="text_syllable">Syllable</string>
-    <string name="error_no_title">Please type in a title</string>
-    <string name="error_no_section_name">Please type in a section name</string>
-    <string name="menu_edit">Edit</string>
-    <string name="menu_delete">Delete</string>
-    <string name="menu_add_note">Add note</string>
-    <string name="menu_insert_row">Insert row</string>
-    <string name="menu_delete_row">Delete row</string>
-    <string name="menu_copy_row">Copy row</string>
-    <string name="menu_paste_row">Paste row</string>
-    <string name="menu_add_section">Add section tag</string>
-    <string name="menu_edit_section">Edit section tag</string>
-    <string name="menu_delete_section">Delete section tag</string>
-    <string name="delete_song_message">Are you sure you want to delete</string>
-    <string name="select_songs_export">Select the songs to export</string>
-    <string name="toast_note_copied">note copied</string>
-    <string name="toast_notes_copied">notes copied</string>
-    <string name="toast_no_notes_copied">No notes copied</string>
-    <string name="menu_export_song">Export song</string>
-    <string name="menu_export_songs">Export songs</string>
-    <string name="menu_import_songs">Import songs</string>
-    <string name="menu_credits">Credits</string>
-    <string name="menu_settings">Settings</string>
-    <string name="export_to">Export to…</string>
-    <string name="error_exporting_song">Error exporting song</string>
-    <string name="error_importing_song">Error importing song</string>
-    <string name="importing_songs">Importing songs…</string>
-    <string name="no_song_imported">No songs imported</string>
-    <string name="song_imported">song imported</string>
-    <string name="songs_imported">songs imported</string>
-    <string name="permission_needed">Permission needed to import songs</string>
-    <string name="no_songs_selected_export">No songs selected</string>
-    <string name="checkbox_show_bendings">Show bendings</string>
-    <string name="checkbox_hide_bendings">Hide bendings</string>
-    <string name="dialog_add_song">Add Song</string>
-    <string name="dialog_edit_song">Edit Song</string>
-    <string name="dialog_add_section">Add Section</string>
-    <string name="dialog_edit_section">Edit Section</string>
-    <string name="credits">Credits</string>
-    <string name="hint_search">Search song</string>
-    <string name="song_key">Key</string>
 
-    <!-- Settings -->
-    <string name="settings_general_settings">GENERAL SETTINGS</string>
-    <string name="settings_backup_restore">BACKUP/RESTORE SONGS</string>
-    <string name="settings_backup">Backup</string>
-    <string name="settings_restore">Restore</string>
-    <string name="settings_credits">Credits</string>
-    <string name="settings_rate_app">Rate the app</string>
-    <string name="settings_feedback">Feedback</string>
+    <!-- Main Activity -->
+    <string name="main_activity_menu_add_song">Add Song</string>
+    <string name="main_activity_menu_search">Search</string>
+    <string name="main_activity_menu_settings">Settings</string>
+    <string name="main_activity_text_no_songs">Press \"+\" to add a song</string>
+    <string name="main_activity_hint_search">Search song</string>
+
+    <!-- Song Dialog -->
+    <string name="song_dialog_hint_title">Title</string>
+    <string name="song_dialog_hint_author">Author</string>
+    <string name="song_dialog_toast_no_title">Please type in a title</string>
+    <string name="song_dialog_text_add_song">Add Song</string>
+    <string name="song_dialog_text_edit_song">Edit Song</string>
+    <string name="song_dialog_text_key">Key</string>
+
+    <!-- Delete Song Dialog -->
+    <string name="delete_song_dialog_message">Are you sure you want to delete</string>
+
+    <!-- Song Activity -->
+    <string name="song_activity_text_no_notes">Press \"+\" to add a note.\nLong press \"+\" for more options.</string>
+    <string name="song_activity_menu_edit">Edit</string>
+    <string name="song_activity_menu_delete">Delete</string>
+    <string name="song_activity_menu_add_note">Add note</string>
+    <string name="song_activity_menu_insert_row">Insert row</string>
+    <string name="song_activity_menu_delete_row">Delete row</string>
+    <string name="song_activity_menu_copy_row">Copy row</string>
+    <string name="song_activity_menu_paste_row">Paste row</string>
+    <string name="song_activity_menu_add_section">Add section tag</string>
+    <string name="song_activity_menu_edit_section">Edit section tag</string>
+    <string name="song_activity_menu_delete_section">Delete section tag</string>
+    <string name="song_activity_toast_note_copied">note copied</string>
+    <string name="song_activity_toast_notes_copied">notes copied</string>
+    <string name="song_activity_toast_no_notes_copied">No notes copied</string>
+
+    <!-- Note Picker Dialog -->
+    <string name="note_picker_dialog_button_delete">Delete</string>
+    <string name="note_picker_dialog_hint_syllable">Syllable</string>
+    <string name="note_picker_dialog_button_show_bendings">Show bendings</string>
+    <string name="note_picker_dialog_button_hide_bendings">Hide bendings</string>
+
+    <!-- Section Dialog -->
+    <string name="section_dialog_hint_section_name">Section name</string>
+    <string name="section_dialog_toast_no_section_name">Please type in a section name</string>
+    <string name="section_dialog_text_add_section">Add Section</string>
+    <string name="section_dialog_text_edit_section">Edit Section</string>
+
+    <!-- Save Changes Dialog -->
+    <string name="save_changes_dialog_message">Save changes to this song?</string>
+
+    <!-- Settings Activity -->
+    <string name="settings_activity_text_settings">Settings</string>
+    <string name="settings_activity_text_general_settings">GENERAL SETTINGS</string>
+    <string name="settings_activity_text_backup_restore">BACKUP/RESTORE SONGS</string>
+    <string name="settings_activity_text_backup">Backup</string>
+    <string name="settings_activity_text_restore">Restore</string>
+    <string name="settings_activity_text_credits">Credits</string>
+    <string name="settings_activity_text_rate_app">Rate the app</string>
+    <string name="settings_activity_text_feedback">Feedback</string>
+    <string name="settings_activity_text_export_to">Export to…</string>
+    <string name="settings_activity_toast_backup_error">Backup error</string>
+    <string name="settings_activity_toast_restore_error">Restore error</string>
+    <string name="settings_activity_toast_importing_songs">Importing songs…</string>
+    <string name="settings_activity_toast_no_song_imported">No songs imported</string>
+    <string name="settings_activity_toast_song_imported">song imported</string>
+    <string name="settings_activity_toast_songs_imported">songs imported</string>
+    <string name="settings_activity_toast_permission_needed">Permission needed to import songs</string>
+
+    <!-- Credits Activity -->
+    <string name="credits_activity_text_credits">Credits</string>
 </resources>
