--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,15 +37,18 @@
     <string name="song_activity_menu_edit_section">Edit section tag</string>
     <string name="song_activity_menu_delete_section">Delete section tag</string>
     <string name="song_activity_menu_customize">Customize</string>
-    <string name="song_activity_menu_add_instrumental">Add mp3</string>
-    <string name="song_activity_menu_toggle_media">Show/Hide Instrumental</string>
+    <string name="song_activity_menu_add_audio_file">Add audio file</string>
+    <string name="song_activity_menu_remove_audio_file">Remove audio file</string>
+    <string name="song_activity_menu_toggle_media">Show/Hide Media player</string>
     <string name="song_activity_toast_note_copied">note copied</string>
     <string name="song_activity_toast_notes_copied">notes copied</string>
     <string name="song_activity_toast_no_notes_copied">No notes copied</string>
-    <string name="song_activity_toast_permission_needed">Permission needed to add instrumental</string>
-    <string name="song_activity_toast_add_instrumental_error">Add instrumental error</string>
-    <string name="song_activity_toast_media_error">Error initializing media</string>
-    <string name="song_activity_toast_no_instrumental">No instrumental added</string>
+    <string name="song_activity_toast_permission_needed">Permission needed to add audio file</string>
+    <string name="song_activity_toast_add_audio_file_error">Error adding audio file</string>
+    <string name="song_activity_toast_no_audio_file">No audio file added</string>
+    <string name="song_activity_toast_audio_file_added">Audio file added</string>
+    <string name="song_activity_toast_audio_file_removed">Audio file removed</string>
+    <string name="song_activity_toast_media_player_init_error">Error initializing media player</string>
 
     <!-- Note Picker Dialog -->
     <string name="note_picker_dialog_button_delete">Delete</string>
