--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -176,8 +176,12 @@
     <string name="qa_activity_text_q_backup_data">Will it backup everything?</string>
     <string name="qa_activity_text_a_backup_data">Almost, it will save all your songs, notes, sections, but not your audio files and customizations. These have to be added manually.</string>
     <string name="qa_activity_text_q_restore">How do I restore my data from a backup file?</string>
-    <string name="qa_activity_text_a_restore">On the settings screen, tap the restore option. Then select the songs.mhs file you want to restore the data from.</string>
-
+    <string name="qa_activity_text_a_restore">On the settings screen, tap the restore option. Then select the mhs file you want to restore the data from.</string>
+    <string name="qa_activity_text_m_sharing">Sharing</string>
+    <string name="qa_activity_text_q_share">How do I share a song?</string>
+    <string name="qa_activity_text_a_share">On the tablature screen tap options, then select Share.</string>
+    <string name="qa_activity_text_q_import">How do I import a shared song?</string>
+    <string name="qa_activity_text_a_import">On the settings screen under Sharing select Import song. Then select the mhs file you want to import the song from.</string>
     <string name="qa_activity_text_m_troubleshooting">Troubleshooting</string>
     <string name="qa_activity_text_q_add_audio_file_error">I can\'t add an audio file. I receive a No filepicker app avialable message.</string>
     <string name="qa_activity_text_a_add_audio_file_error">This is because the app relies on you to use other apps to select a file, and you have no such app. Please install Google Drive, File Manager or any other file selection app for this function to work.</string>
